--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ Releases/
 # --- Unreal auto-generated config/backups ---
 # Keep Default*.ini (project settings), ignore local/user-specific ones
 Saved/Config/
+LivingRoom.zip
